<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gw.krunal.weathercatch.WeatherSettings">


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radiogroup_zipcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_zipcode"/>
            <RadioButton android:id="@+id/radio_zipcode_yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/zipcode_yes"
                         android:onClick="onZipcodeRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_zipcode_no"
                         android:checked="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/zipcode_no"
                         android:onClick="onZipcodeRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/enter_zipcode"/>
            <EditText
                android:text="@string/sample_zipcode"
                android:id="@+id/zipcode_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/save_zipcode_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_zipcode_button"/>
            </LinearLayout>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radiogroup_metric"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Metric"/>
            <RadioButton android:id="@+id/radio_metric_f"
                         android:checked="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/metric_f"
                         android:onClick="onMetricRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_metric_c"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/metric_c"
                         android:onClick="onMetricRadioButtonClicked"/>
        </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_text"/>
            <Spinner
                android:id="@+id/day_count_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/day_count"/>
            <Button
                android:id="@+id/save_days_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_day_button"/>
    </LinearLayout>

</LinearLayout>
